force-app/main/default/objects/Activity_Summary__c/Activity_Summary__c.object-meta.xml
<CustomObject>
    <description>Counts all of community users logs</description>
    <label>VP Aktivitäten</label>
    <nameField>
        <displayFormat>VP Login {0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VP Aktivitäten</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>