force-app/main/default/objects/Activity_Summary__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>For the Account Monitoring component</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Activity_Summaries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>