force-app/main/default/objects/Activity_Summary__c/fields/DayInMonth__c.field-meta.xml
<CustomField>
    <fullName>DayInMonth__c</fullName>
    <description>Used for report filters</description>
    <formula>DATE(VALUE(TEXT(Year__c)), VALUE(TEXT(Month__c)), 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day in Month</label>
    <type>Date</type>
</CustomField>