force-app/main/default/objects/Activity_Summary__c/fields/LastLogin__c.field-meta.xml
<CustomField>
    <fullName>LastLogin__c</fullName>
    <formula>Contact__r.VPBenutzerLetzterLogin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Letzter Login</label>
    <type>DateTime</type>
</CustomField>