force-app/main/default/objects/Activity_Summary__c/fields/Number_of_downloads__c.field-meta.xml
<CustomField>
    <fullName>Number_of_downloads__c</fullName>
    <label>Anzahl Downloads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>