force-app/main/default/objects/Activity_Summary__c/fields/Number_of_Logins__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Logins__c</fullName>
    <description>For the Account Monitoring component</description>
    <label>Number of Logins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>