force-app/main/default/objects/Activity_Summary__c/fields/Number_of_new_prospects__c.field-meta.xml
<CustomField>
    <fullName>Number_of_new_prospects__c</fullName>
    <label>Anzahl angelegte Interessenten</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>